--- a/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
@@ -32,15 +32,15 @@
             <br>
             <div class="row form-inline">
                 <div class="control-label col-md-3">
-                    <label>Cantidad AdquiridaXCantidad Comprada: </label>
+                    <label>Cantidad:</label>
                 </div>                
-                @Html.EditorFor(model => model.cantAdq, new { @class = "col-md-3" })
+                @Html.EditorFor(model => model.cantAdq, new { @class = "col-md-3", htmlAttributes = new { placeholder = "Cant. Adquirida" } })
                 @Html.ValidationMessageFor(model => model.cantAdq)
                 
                 
                 <label>X</label>
                 
-                @Html.EditorFor(model => model.cantComp, new { @class = "col-md-3" })
+                @Html.EditorFor(model => model.cantComp, new { @class = "col-md-3", htmlAttributes = new { placeholder = "Cant. Comprada" } })
                 @Html.ValidationMessageFor(model => model.cantComp)
 
             </div><br> 
