--- a/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Register";
     var db = new inf245netsoft();
+    DatosGeneralesModel datos = Session["modelEvento"] as DatosGeneralesModel;
 }
 @model DatosGeneralesModel
 <div class="container-fluid">
@@ -14,6 +15,8 @@
     </div>
 </div>
 <div class="container">
+    <h2>Nuevo Evento: Datos Generales</h2>
+    <h5>@ViewBag.MensajeExtra</h5>
     <div class="row">
         <div class="col-md-12">
             <a href="@Url.Action("Index","Evento")" class="btn btn-danger pull-right"><span class="glyphicon glyphicon-hand-left"></span> Regresar</a>
@@ -38,18 +41,20 @@
                         @Html.LabelFor(c => c.idOrganizador, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="organizadorNombre" readonly/>
-                                @Html.HiddenFor(c => c.idOrganizador, new { @id="valOrganizador"})
+                                <input type="text" class="form-control" id="organizadorNombre" readonly />
+                                @Html.HiddenFor(c => c.idOrganizador, new { @id = "valOrganizador" ,@value= @datos.idOrganizador})
                                 <span class="input-group-btn"><a href="#modalBuscarOrganizador" class="btn btn-primary" data-toggle="modal" type="button">Buscar <span class="glyphicon glyphicon-search"></span></a></span>
                             </div>
-
+                            @Html.ValidationMessageFor(model => model.idOrganizador)
                         </div>
                     </div><br><br>
                     <div class="form-group">
                         @Html.LabelFor(c => c.idCategoria, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.DropDownListFor(c => c.idCategoria, @ViewBag.CatID as SelectList, "Categoria", new { @class = "form-control", @onchange = "cambioCategoria()" })
+                            @Html.ValidationMessageFor(model => model.idCategoria)
                         </div>
+
                     </div><br><br>
                     <div class="form-group">
                         @Html.LabelFor(c => c.idSubCat, new { @class = "control-label col-md-2" })
@@ -59,13 +64,14 @@
                     </div><br><br>
 
                     <div class="form-group">
-                        @Html.LabelFor(c => c.idLocal, new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(c => c.Local, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             <div class="input-group">
-                                <input class="form-control" id="localNombre" readonly/>
-                                @Html.HiddenFor(c => c.idLocal, new { @id = "valLocal" })
+                                <input class="form-control" id="localNombre" readonly />
+                                @Html.HiddenFor(c => c.Local, new { @id = "valLocal", @value = "" + @datos.Local })
                                 <span class="input-group-btn"><a href="#modalBuscarLocal" class="btn btn-primary" data-toggle="modal" type="button">Buscar <span class="glyphicon glyphicon-search"></span></a></span>
                             </div>
+                            @Html.ValidationMessageFor(c => c.Local)
                         </div>
                     </div><br><br>
 
@@ -74,11 +80,13 @@
                         <div class="col-md-10">
                             @Html.TextBoxFor(c => c.Direccion, new { @class = "form-control", @placeholder = "Solo si no existe local para el evento" })
                         </div>
+                        @Html.ValidationMessageFor(c => c.Direccion)
                     </div><br><br>
                     <div class="form-group">
                         @Html.LabelFor(model => model.idRegion, new { @class = "control-label col-md-2" })
                         <div class="col-md-4">
                             @Html.DropDownListFor(model => model.idRegion, @ViewBag.DepID as SelectList, "Departamento", new { @class = "form-control", @onchange = "cambioDepartamento()" })
+                            @Html.ValidationMessageFor(c => c.idRegion)
                         </div>
                         @Html.LabelFor(model => model.idProv, new { @class = "control-label col-md-2" })
                         <div class="col-md-4">
