mala referencia en registar

--- a/WebApplication4/WebApplication4/Views/Evento/ModificarEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ModificarEvento.cshtml
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="tab-content">
-        @using (Html.BeginForm("DatosGenerales", "Evento", FormMethod.Post, new { model = Model }))
+        @using (Html.BeginForm("ModificarEvento", "Evento", FormMethod.Post, new { model = Model }))
         {
             @Html.AntiForgeryToken()
             <div class="tab-pane active  fade in  container" id="generales">
