--- a/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/Index.cshtml
@@ -46,7 +46,7 @@
         <div class="col-md-10 col-sm-6 col-xs-6">
             <a class="btn btn-primary" href="#nuevaPromocion" data-toggle="modal">Agregar Cantidad<span class="glyphicon glyphicon-plus"></span></a>    
             <a class="btn btn-primary" href="#nuevaPromocion2" data-toggle="modal">Agregar Tarjeta<span class="glyphicon glyphicon-plus"></span></a> 
-            <a class="btn btn-primary" data-toggle="modal" onclick="borrar()">Desactivar<span class="glyphicon glyphicon-plus"></span></a>
+            <a class="btn btn-primary" data-toggle="modal" onclick="borrar()">Desactivar<span class="glyphicon glyphicon-remove"></span></a>
         </div>
 
         <div class="col-md-2 col-sm-6 colxs-6">
