--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -33,7 +33,7 @@
                 <a class="btn btn-primary" onclick="redirigePromocion()">Agregar Promoción <span class="glyphicon glyphicon-tags"></span></a>
                 <a class="btn btn-primary" href="reservar_organizador.html">Reservar Entradas <span class="glyphicon glyphicon-flag"></span></a>
                 <a class="btn btn-warning" onclick="redirigePostergar()">Postergar <span class="glyphicon glyphicon-calendar"></span></a>
-                <a class="btn btn-warning" href="cancelar_evento.html">Cancelar <span class="glyphicon glyphicon-remove-sign"></span></a>
+                <a class="btn btn-warning" onclick="redirigeCancelar()">Cancelar <span class="glyphicon glyphicon-remove-sign"></span></a>
             </div>
         </div>
         <div class="col-md-2 col-sm-12" style="text-align:center">
@@ -261,6 +261,15 @@
         var evento = $('#idEventoT').val();
         if (evento != "") {
             window.location.href = '/Evento/PostergarEvento?evento='+evento;
+        } else {
+            alert("Seleccione un evento");
+            evento = "";
+        }
+    }
+    function redirigeCancelar() {
+        var evento = $('#idEventoT').val();
+        if (evento != "") {
+            window.location.href = '/Evento/CancelarEvento?evento=' + evento;
         } else {
             alert("Seleccione un evento");
             evento = "";
